--- a/lib/views/help/credits.html.erb
+++ b/lib/views/help/credits.html.erb
@@ -4,21 +4,21 @@
 <div id="left_column_flip" class="left_column_flip">
 <h1 id="credits"><%= @title %> <a href="#credits">#</a> </h1>
 
-<p>Alaveteli, softver koji pokreće <%= site_name %>, je projekt nevladine organizacije iz Velike Britanije &#8212; <a href="https://www.mysociety.org">mySociety</a>. Oni grade internetske stranice koje osnažuju građane u njihovim pravima. I ovo je jedna takva stranica.</p>
+<p>Alaveteli, softver koji pokreće <i><%= site_name %></i>, je projekt nevladine organizacije iz Velike Britanije &#8212; <a href="https://www.mysociety.org">mySociety</a>. Oni grade internetske stranice koje osnažuju građane u njihovim pravima. I ovo je jedna takva stranica.</p>
 
 <dl>
 
-<dt id="thanks">Ljudi koji su omogućili <%= site_name %> <a href="#thanks">#</a> </dt>
+<dt id="thanks">Ljudi koji su omogućili <i><%= site_name %></i> <a href="#thanks">#</a> </dt>
 <dd>Eh, skoro svi (a možda i ti)! 
 <ul>
 <li>
-    <a href="http://twitter.com/darvvon">Mirolav Schlossberg</a>, voditelj <a href="http://open.hr">HrOpen</a> ekspertne skupine <a href="http://codeforcroatia.org">Programiraj za Hrvatsku</a>, za iniciranje, koordiniranje i u konačnici implementaciju ove internetske aplikacije za ponošenje elektronskih prigovora.
+    <a href="http://twitter.com/darvvon">Mirolav Schlossberg</a>, voditelj <a href="http://codeforcroatia.org">Programiraj za Hrvatsku</a>, za iniciranje, koordiniranje i u konačnici implementaciju ove internetske aplikacije za ponošenje elektronskih prigovora.
 </li>
 <li>
     Marin i Ivan Balabanić, osnivači udruge No-Me-Kultura za odličnu ideju i osnivanje portala Reklamacije.net.
 </li>
 <li>
-    Zahvaljujemo se i svim volonterima koji su sudjelovali u projektu potrošačkog portala Reklamacije.net i portala Podnesi.Rekalamacije.net.  
+    Zahvaljujemo se i svim volonterima koji su sudjelovali na Rekalamacije.net projektu.  
 </li>
 <li>
     Naposljetku, svim trgovcima i službenicima koji odgovaraju na brojne prigovore napravljene putem stranice. Njihova marljivost, strpljenje i profesionalnost jest ono što zapravo sačinjava zadovoljstvo građana i njihovih korisnika koje vidite ovdje.
@@ -33,7 +33,7 @@ Svi ste naše zvjezde.
     <ul>
     <li>Pomozi ljudima u pronalasku uspješno rješenih prigovora, i prati rad pravnih osoba.</li>
     <li>Potraži pravne osobe koje nam nedostaju i <a href="/help/requesting#missing_body">pošalji informacije o novim pravnim osobama</a>.</li>
-    <li>Napiši blog o portalu <%= site_name %> ili nekom zanimljivom prigovoru kojeg su podnjeli korisnici portala. Reci prijateljima kako jednostavno mogu podnijeti svoje prigovore.
+    <li>Napiši blog o portalu <i><%= site_name %></i> ili nekom zanimljivom prigovoru kojeg su podnjeli korisnici portala. Reci prijateljima kako jednostavno mogu podnijeti svoje prigovore.
     <li>Zaigraj <a href="/categorise/play">igru kategorizacije</a> i postavi pravilan status na prigovorima.</li>
     </ul>
 
@@ -66,7 +66,7 @@ Svi ste naše zvjezde.
   <dd>
     <p>Nemamo proračun za marketinške svrhe, stoga ćemo ti biti zahvalni ako nas preporučiš dalje.</p>
       <ul>
-        <li>Napiši blog o portalu <%= site_name %> ili nekom zanimljivom prigovoru kojeg su podnjeli korisnici portala. 
+        <li>Napiši blog o portalu <i><%= site_name %></i> ili nekom zanimljivom prigovoru kojeg su podnjeli korisnici portala. 
         <li>Postaj o portalu, i čemu služi na forumu kojeg često posjećuješ.</li>
         <li>Reci prijateljima kako jednostavno mogu podnijeti svoje prigovore.</li>
         <li>Upoznaj lokalne novine ili časopis lokalne zajednice o dobrim osobinama portala.</li>
@@ -76,7 +76,7 @@ Svi ste naše zvjezde.
 
   <dt id="code">Poboljšaj kod <a href="#code">#</a></dt>
   <dd>
-    <p>Jesi li našao nešto što može raditi bolje? Ako si programer, <a href="https://github.com/mysociety/alaveteli/">pogledaj source code</a> glavnog projekta, <a href="http://alaveteli.org/">Alaveteli</a> i pošalji pull request. <%= site_name %> je programirana u <a href="http://rubyonrails.org/">Ruby on Rails</a>.</p>
+    <p>Jesi li našao nešto što može raditi bolje? Ako si programer, <a href="https://github.com/mysociety/alaveteli/">pogledaj source code</a> glavnog projekta, <a href="http://alaveteli.org/">Alaveteli</a> i pošalji pull request. <i><%= site_name %></i> je programirana u <a href="http://rubyonrails.org/">Ruby on Rails</a>.</p>
   </dd>
 </dl>
 
