--- a/lib/views/help/officers.html.erb
+++ b/lib/views/help/officers.html.erb
@@ -11,12 +11,12 @@
 <dt id="top">Dobili ste prigovor s ove platforme putem e-maila? <a href="#top">#</a> </dt>
 
 <dd>
-<p><%= site_name %> je korisna usluga koja građanima i široj javnosti pomaže izraditi pravilne pisane prigovore trgovcima odnosno pružateljima usluga kako bi on bio zakonski važeći te podijeliti iskustvo s drugim potrošačima čime se ostvaruje jedno od temeljnih potrošački prava – pravo na informiranje i reklamaciju.</p>
+<p><i><%= site_name %></i> je korisna usluga koja građanima i široj javnosti pomaže izraditi pravilne pisane prigovore trgovcima odnosno pružateljima usluga kako bi on bio zakonski važeći te podijeliti iskustvo s drugim potrošačima čime se ostvaruje jedno od temeljnih potrošački prava – pravo na informiranje i reklamaciju.</p>
 </dd>
 
-<dt id="responses">Zašto je portal <%= site_name %> koristan? <a href="#responses">#</a> </dt>
+<dt id="responses">Zašto je portal <i><%= site_name %></i> koristan? <a href="#responses">#</a> </dt>
 
-<dd>Portal nije pristran i nije <i>a priori</i> na strani potrošača nego služi kao platforma koja vas povezuje s kupcima i korisnicima vaših usluga. Ukoliko je prigovor opravdan portal vam pruža mogućnost da pokažete društveno odgovorno ponašanje i javno ispoštujete zakonsku obvezu te se na taj način pokažete da su vam u svakoj situaciji kupci  i korisnici na prvom mjestu. Ukoliko je prigovor neopravdan putem portala možete prenijeti javnosti svoj pogled na sporni slučaja te na taj način također pokazati brigu za potrošače.
+<dd>Portal nije pristran i nije <i>a priori</i> na strani potrošača nego služi kao platforma koja vas povezuje s kupcima i korisnicima vaših usluga. Ukoliko je prigovor opravdan portal vam pruža mogućnost da pokažete društveno odgovorno ponašanje i javno ispoštujete zakonsku obvezu te se na taj način pokažete da su vam u svakoj situaciji kupci i korisnici na prvom mjestu. Ukoliko je prigovor neopravdan putem portala možete prenijeti javnosti svoj pogled na sporni slučaja te na taj način također pokazati brigu za potrošače.
 </dd>
 
 <dt id="realpeople">Jesu li ljudi koji šalju prigovore stvarni? <a href="#realpeople">#</a> </dt>
@@ -25,18 +25,18 @@
 <p>Da. Za potrebe praćenja odgovora koristimo računalno generirane e-mail adrese za svaki pojedini zahtjev. No, prije nego što može poslati zahtjev, svaki korisnik se mora registrirati na stranici sa jedinstvenom e-mail adresom koju mi tada verificiramo. Pretraživanjem stranice možete naći popis podnesenih zahtjeva za svaku pojedinu osobu.
 </p>
 
-<p>Dakle, elektronički pisani prigovor koji ste primili je izrađen od osobe koja je koristila podnesi.reklamacije.net. Na ovaj zahtjev možete jednostavno odgovoriti e-mailom kao što biste to učinili direktnim putem. Jedina razlika je u tome što će vaš odgovor biti automatski objavljen na internetu.
+<p>Dakle, elektronički pisani prigovor koji ste primili je izrađen od osobe koja je koristila <i><%= site_name %></i>. Na ovaj zahtjev možete jednostavno odgovoriti e-mailom kao što biste to učinili direktnim putem. Jedina razlika je u tome što će vaš odgovor biti automatski objavljen na internetu.
 </p>
 </dd>
 
 <dt id="vexatious">Šaljete li neželjenu poštu? <a href="#vexatious">#</a> </dt>
 
-<dd><p><%= site_name %> ne piše prigovore. Mi samo prosljeđujemo prigovore u ime naših korisnika, koji su stvarni ljudi. Oni su ti koji pišu prigovore.</p>
+<dd><p><i><%= site_name %></i> ne piše prigovore. Mi samo prosljeđujemo prigovore u ime naših korisnika, koji su stvarni ljudi. Oni su ti koji pišu prigovore.</p>
 
-<p>Pogledajte to ovako - kad bi mnoštvo ljudi poslalo prigovore s različitih Hotmail e-mail adresa, ne biste mislili da je Microsoft taj koji šalje te prigovore. Ista stvar je i kod prigovora poslanih putem <%= site_name %>. Štoviše, budući da su svi prigovori javnog karaktera, puno je lakše uočiti korisnika koji učestalo šalje nevažne i neželjene poruke.</p>
+<p>Pogledajte to ovako - kad bi mnoštvo ljudi poslalo prigovore s različitih Hotmail e-mail adresa, ne biste mislili da je Microsoft taj koji šalje te prigovore. Ista stvar je i kod prigovora poslanih putem <i><%= site_name %></i>. Štoviše, budući da su svi prigovori javnog karaktera, puno je lakše uočiti korisnika koji učestalo šalje nevažne i neželjene poruke.</p>
 </dd>
 
-<dt id="spam_problems">Zahtjev je vidljiv na <%= site_name %> no nismo ga primili putem e-maila! <a href="#spam_problems">#</a> </dt>
+<dt id="spam_problems">Zahtjev je vidljiv na <i><%= site_name %></i> no nismo ga primili putem e-maila! <a href="#spam_problems">#</a> </dt>
 
 <dd><p>Ako zahtjev postoji na stranici, to znači da smo ga pokušali poslati putem e-maila. Prilikom svakog neuspjelog slanja, poruka će se automatski pojaviti na stranici. Ukoliko dođe do ovakve situacije molimo da nas <a href="/help/contact">kontaktirate</a> te da nam dostavite valjanu e-mail adresu.</p>
 
@@ -53,13 +53,14 @@
 
 <dt id="copyright"><a name="commercial"></a>Autorska prava na objavljenje prigovore i odgovore na njih <a href="#copyright">#</a> </dt>
 
-<dd><p>Autori prigovora na <%= site_name %> su korisnici portala. Korisnici portala registracijom i objavljivanjem prigovora prihvaćaju da su svi sadržaji na <%= site_name %> pod CC licencom. Preciznije pod licencom <a href="https://creativecommons.org/licenses/by/4.0/">Creative commons attribution alone</a>. Sadržaji objavljeni na portalu <%= site_name %> dozvoljavaju drugima dijeljenje, mijenjanje, prilagođavanje i nadogradnju orginalnog djela pod uvjetom da navedu autora, naslov djela, izvornu adresu i licencu (u obliku linka). Drugim riječima, druge fizičke i pravne osobe mogu koristiti tekstove ukoliko korektno navedu izvor i autora. Tekstovi se mogu preuzimati i u komercijalne svrhe.</p>
+<dd><p>Autori prigovora na <i><%= site_name %></i> su korisnici portala. Korisnici portala registracijom i objavljivanjem prigovora prihvaćaju da su svi sadržaji na <%= site_name %> pod CC licencom. Preciznije pod licencom <a href="https://creativecommons.org/licenses/by/4.0/">Creative commons attribution alone</a>. Sadržaji objavljeni na portalu <i><%= site_name %></i> dozvoljavaju drugima dijeljenje, mijenjanje, prilagođavanje i nadogradnju orginalnog djela pod uvjetom da navedu autora, naslov djela, izvornu adresu i licencu (u obliku linka). Drugim riječima, druge fizičke i pravne osobe mogu koristiti tekstove ukoliko korektno navedu izvor i autora. Tekstovi se mogu preuzimati i u komercijalne svrhe.</p>
 <p>Ukoliko ste vi vlasnik nekih podataka nehotice objavljenih na ovom portalu, <a href="/help/contact">kontaktirajte nas</a> za uklanjanje tog sadržaja.
 </p>
 </dd>
 
-<dt id="allowed_responses">Moj odgovor na staru reklamaciju putem <%= site_name %> je vraćen s greškom!<a href="#allowed_responses">#</a> </dt>
-      <dd>Nakon šest mjeseci neaktivnosti, <%= site_name %> ograničuje tko može poslati odgovor kako bi zaustavili neželjeno spamanje starih prigovora. U tom trenutku samo trgovac može dostaviti odgovor putem službene email adrese za prigovore. Nakon dvanaest mjeseci, prigovor se zatvara i ne zaprima odgovore od nikoga. Ako trebate odgovoriti na staru reklamaciju koju treba ponovno omogućiti za odgovore, <a href="<%= help_contact_path %>">kontaktirajte nas</a>.
+<dt id="allowed_responses">Moj odgovor na staru reklamaciju putem <i><%= site_name %></i> je vraćen s greškom!<a href="#allowed_responses">#</a> </dt>
+
+      <dd>Nakon šest mjeseci neaktivnosti, <i><%= site_name %></i> ograničuje tko može poslati odgovor kako bi zaustavili neželjeno spamanje starih prigovora. U tom trenutku samo trgovac može dostaviti odgovor putem službene email adrese za prigovore. Nakon dvanaest mjeseci, prigovor se zatvara i ne zaprima odgovore od nikoga. Ako trebate odgovoriti na staru reklamaciju koju treba ponovno omogućiti za odgovore, <a href="<%= help_contact_path %>">kontaktirajte nas</a>.
       </dd>
 
 <p><strong>Ukoloko još niste</strong>, pročitate <a href="/help/about">uvod o ovom projektu</a> --&gt;
