--- a/lib/views/help/privacy.html.erb
+++ b/lib/views/help/privacy.html.erb
@@ -49,7 +49,7 @@ Objavljujemo vaš prigovor na internetu tako da ga svatko može pročitati i pos
 
 <dd>
 
-<p>Portal <%= site_name %> zadržava pravo da izbriše Vaš prigovor ukoliko ga ocijeni pravno ili sadržajno nevaljanim u pogledu javne komunikacije. Također, portal će obrisati Vaš prigovor ukoliko to zatražite elektroničkim putem.
+<p>Portal <i><%= site_name %></i> zadržava pravo da izbriše Vaš prigovor ukoliko ga ocijeni pravno ili sadržajno nevaljanim u pogledu javne komunikacije. Također, portal će obrisati Vaš prigovor ukoliko to zatražite elektroničkim putem.
 </p>
 
 </dd>
