--- a/lib/views/help/requesting.html.erb
+++ b/lib/views/help/requesting.html.erb
@@ -13,7 +13,7 @@
 <p>Ponekada može biti teško pronaći pravi naziv pravne osobe. Evo nekoliko savjeta:
 <ul>
 <li>Pogledajte na račun ili neki drugi dokument je li napisano ime trgovca ili pružatelja usluga.</li>
-<li>Potražite na <%= site_name %> neke slične žalbe.</li>
+<li>Potražite na <i><%= site_name %></i> neke slične žalbe.</li>
 <li>Upišite u Google ili neku drugu tražilicu naziv proizvoda koji ste kupili te pokušajte utvrditi radi li se o trgovcu ili tijelu javne vlasti kojem možete podnijeti prigovor.</li>
 <li>Predlažemo da uvijek pogledate na račun ili na neki drugi način saznate ime pravne osobe. Pravne osobe su u našu bazu upisane pod pravim nazivima (ne tržišnim!) i naći ćete ih pod imenima pod kojima su upisane u registre. Također, da bi prigovor bio zakonski valjan morate upisati pravi naziv pravne osobe.</li>
 <li>Ako zapnete, možete <a href="/help/contact">nas kontaktirati</a> za pomoć.</li>
