--- a/lib/views/help/_sidebar.html.erb
+++ b/lib/views/help/_sidebar.html.erb
@@ -2,6 +2,7 @@
     <h2>Stranice za pomoć</h2>
     <ul class="no_bullets">
         <li><%= link_to_unless_current "Uvod", help_about_path %></li>
+        <li><a href="/help/about#prava-potrosaca">Prava potrošača</a></li>
         <li><%= link_to_unless_current "Pisanje prigovora", help_requesting_path %></li>
         <li><%= link_to_unless_current "Vaša privatnost", help_privacy_path %></li>
         <li><%= link_to_unless_current "Trgovci i djelatnici", help_officers_path %></li>
