--- a/lib/views/help/officers.html.erb
+++ b/lib/views/help/officers.html.erb
@@ -62,9 +62,10 @@
 
       <dd>Nakon šest mjeseci neaktivnosti, <i><%= site_name %></i> ograničuje tko može poslati odgovor kako bi zaustavili neželjeno spamanje starih prigovora. U tom trenutku samo trgovac može dostaviti odgovor putem službene email adrese za prigovore. Nakon dvanaest mjeseci, prigovor se zatvara i ne zaprima odgovore od nikoga. Ako trebate odgovoriti na staru reklamaciju koju treba ponovno omogućiti za odgovore, <a href="<%= help_contact_path %>">kontaktirajte nas</a>.
       </dd>
+</dl>
 
 <p><strong>Ukoloko još niste</strong>, pročitate <a href="/help/about">uvod o ovom projektu</a> --&gt;
-<br><strong>Pogledajte</strong> i <a href="/help/credits">zahvale</a> ili <a href="/help/api">API za programere</a> --&gt;
+<br><strong>Pogledajte</strong> i <a href="/help/credits">zahvale</a> ili <a href="/help/api">API za programere</a> --&gt;</p>
 
 <div id="hash_link_padding"></div>
 </div>
