--- a/lib/views/general/_responsive_header.html.erb
+++ b/lib/views/general/_responsive_header.html.erb
@@ -1,4 +1,5 @@
 <% if AlaveteliConfiguration::responsive_styling || params[:responsive] %>
+  <% unless @user and @user.is_admin? %>
     <div class="ms-header">
       <div class="ms-header__container">
         <div class="ms-header__logo">
@@ -6,6 +7,7 @@
         </div>
       </div>
     </div>
+  <% end %>
 <% end %>
 <div class="only-show-for-print">
   <p class="print-information">Printed from <%= request.original_url %> on <%= Time.zone.now.to_formatted_s(:long)  %></p>
