--- a/lib/views/help/contact.html.erb
+++ b/lib/views/help/contact.html.erb
@@ -9,16 +9,16 @@
     <h1 id="contact"><%= @title %> <a href="#contact">#</a> </h1>
     <p> </p>
     
-    <h2 id="email">Kontaktirajte pravnu osobu za službene informacije</h2>
+    <h2 id="email">Kontaktirajte trgovca</h2>
         <ul>
-            <li><a href="<%= new_request_path %>">Idite ovdje</a> da napišete javni prigovor nekom trgovcu ili pružatelju usluga.</li>
+            <li><a href="<%= new_request_path %>">Idite ovdje</a> da napišete javni prigovor nekoj pravnoj osobi - trgovcu ili pružatelju usluga.</li>
 
             <li>
             Za više informacija kako funkcionira portal za elektronsko podnošenje prigovora <i><%= site_name %></i> molimo vas da pokušate pronaći odgovor na stranicama za 
             <a href="<%= help_requesting_path(:anchor => 'data_protection') %>">pomoć</a>.
             </li>
 
-            <li>Ukoliko imate pitanja vezano uz zakonsku regulativu zaštite prava potrošača molimo da pregledate stranice središnjeg portala Reklamacije.net u rubrici Pomoć.</li>
+            <li>Ukoliko imate pitanja vezano uz zakonsku regulativu zaštite prava potrošača molimo da pregledate stranice <i><%= site_name %></i> u rubrici Pomoć.</li>
         </ul>
 
     <% end %>
