--- a/lib/views/general/_responsive_header.html.erb
+++ b/lib/views/general/_responsive_header.html.erb
@@ -1,5 +1,6 @@
 <% if AlaveteliConfiguration::responsive_styling || params[:responsive] %>
-  <% unless @user and @user.is_admin? %>
+  <% if is_admin? %>
+  <% else %>
     <div class="ms-header">
       <div class="ms-header__container">
         <div class="ms-header__logo">
