--- a/lib/views/request/show.html.erb
+++ b/lib/views/request/show.html.erb
@@ -19,6 +19,8 @@
 <div class="request-header">
   <div class="row">
 
+  <div class="fb-quote"></div>
+
     <h1><%=h(@info_request.title)%></h1>
 
     <div class="request-header__action-bar-container">
