fixes, add blog

--- a/lib/views/request/show.html.erb
+++ b/lib/views/request/show.html.erb
@@ -93,7 +93,10 @@
     </div>
   <% end %>
 
+  <!-- Facebook Comments -->
+  <!--
   <div class="fb-comments" data-href="{{request_url}}" data-numposts="5"></div>
+  -->
 
 </div>
 
