--- a/lib/views/general/blog.html.erb
+++ b/lib/views/general/blog.html.erb
@@ -24,6 +24,7 @@
     <div class="act_link">
       <h2><%= _("Stay up to date") %></h2>
       <%= image_tag "twitter.png", :alt => "twitter icon", :class => "twitter-icon" %> <a href="https://twitter.com/<%= @twitter_user %>"><%= _("Follow us on twitter") %></a><br/>
+      <a href="https://facebook.com/<%= AlaveteliConfiguration::facebook_username %>" class="social-link social-link--facebook"><%= _("Follow us on facebook") %></a>
       <%= image_tag "feed-16.png", :alt => "RSS icon" %> <a href="<%= @feed_url %>"><%= _("Subscribe to blog") %></a>
     </div>
     <% if AlaveteliConfiguration::twitter_widget_id %>
