--- a/app/assets/stylesheets/widget.scss
+++ b/app/assets/stylesheets/widget.scss
@@ -1,9 +1,9 @@
-$body-bg: #f7eee1;
-$button-bg: #8b9352;
+$body-bg: #f4f4f4;
+$button-bg: #863c83;
 $heading-color: #3d3b38;
-$status-success: #aab26e;
-$status-failure: #ff7959;
-$status-pending: #e69e5d;
+$status-success: #62b356;
+$status-failure: #e04b4b;
+$status-pending: #d87c10;
 
 /* CSS Mini Reset */
 
@@ -154,9 +154,10 @@ a:active {
 }
 
 .alaveteli-widget__people-count {
+  color: #fff;
   position: absolute;
   top: 22px;
-  left: 197px;
+  left: 176px;
   width: 100px;
   text-align: center;
   line-height: 1.3em;
